[project]
requires-python = ">=3.8"
name = "gard-mlflow"
version = "0.0.1"
description = "GARD customization of MLFlow"

dependencies = [
    "mlflow"
]

[project.entry-points."mlflow.app"]
gard-mlflow = "gard_mlflow.app:create_app"

[project.entry-points."mlflow.app.client"]
gard-mlflow = "gard_mlflow.client:AuthClient"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.10.0"]