[project]
requires-python = ">=3.8"
name = "mlflow-auth"
version = "0.0.1"
description = "Auth extensions to MLFlow"

dependencies = [
    "mlflow"
]

[project.entry-points."mlflow.app"]
mlflow-auth = "mlflow_auth.app:create_app"

[project.entry-points."mlflow.app.client"]
mlflow-auth = "mlflow_auth.client:AuthClient"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.10.0"]